--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "firebase": "^10.12.2"
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.3.0"
   },
   "devDependencies": {
     "dotenv": "^16.4.5",
